// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[babel-ts] 1`] = `
"Type argument list cannot be empty. (1:4)
> 1 | foo<>()
    |    ^
Cause: Type argument list cannot be empty. (1:3)"
`;

exports[`snippet: #0 format[oxc-ts] 1`] = `
"Type argument list cannot be empty. (1:4)
> 1 | foo<>()
    |    ^^"
`;

exports[`snippet: #0 format[typescript] 1`] = `
"Type argument list cannot be empty. (1:4)
> 1 | foo<>()
    |    ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #1 format[babel-ts] 1`] = `
"Type argument list cannot be empty. (1:5)
> 1 | (foo<>())
    |     ^
Cause: Type argument list cannot be empty. (1:4)"
`;

exports[`snippet: #1 format[oxc-ts] 1`] = `
"Type argument list cannot be empty. (1:5)
> 1 | (foo<>())
    |     ^^"
`;

exports[`snippet: #1 format[typescript] 1`] = `
"Type argument list cannot be empty. (1:5)
> 1 | (foo<>())
    |     ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #2 format[babel-ts] 1`] = `
"Type argument list cannot be empty. (1:8)
> 1 | new Foo<>()
    |        ^
Cause: Type argument list cannot be empty. (1:7)"
`;

exports[`snippet: #2 format[oxc-ts] 1`] = `
"Type argument list cannot be empty. (1:8)
> 1 | new Foo<>()
    |        ^^"
`;

exports[`snippet: #2 format[typescript] 1`] = `
"Type argument list cannot be empty. (1:8)
> 1 | new Foo<>()
    |        ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #3 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:13)
> 1 | function foo<>(){}
    |             ^
Cause: Type parameter list cannot be empty. (1:12)"
`;

exports[`snippet: #3 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:13)
> 1 | function foo<>(){}
    |             ^^"
`;

exports[`snippet: #3 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:13)
> 1 | function foo<>(){}
    |             ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #4 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | (function foo<>(){})
    |              ^
Cause: Type parameter list cannot be empty. (1:13)"
`;

exports[`snippet: #4 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | (function foo<>(){})
    |              ^^"
`;

exports[`snippet: #4 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | (function foo<>(){})
    |              ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #5 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:10)
> 1 | class Foo<> {}
    |          ^
Cause: Type parameter list cannot be empty. (1:9)"
`;

exports[`snippet: #5 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:10)
> 1 | class Foo<> {}
    |          ^^"
`;

exports[`snippet: #5 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:10)
> 1 | class Foo<> {}
    |          ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #6 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:11)
> 1 | (class Foo<> {})
    |           ^
Cause: Type parameter list cannot be empty. (1:10)"
`;

exports[`snippet: #6 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:11)
> 1 | (class Foo<> {})
    |           ^^"
`;

exports[`snippet: #6 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:11)
> 1 | (class Foo<> {})
    |           ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #7 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | class Foo {constructor<>()}
    |                       ^
Cause: Type parameter list cannot be empty. (1:22)"
`;

exports[`snippet: #7 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | class Foo {constructor<>()}
    |                       ^^"
`;

exports[`snippet: #7 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | class Foo {constructor<>()}
    |                       ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #8 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:24)
> 1 | (class Foo {constructor<>()})
    |                        ^
Cause: Type parameter list cannot be empty. (1:23)"
`;

exports[`snippet: #8 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:24)
> 1 | (class Foo {constructor<>()})
    |                        ^^"
`;

exports[`snippet: #8 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:24)
> 1 | (class Foo {constructor<>()})
    |                        ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #9 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:18)
> 1 | class Foo {method<>()}
    |                  ^
Cause: Type parameter list cannot be empty. (1:17)"
`;

exports[`snippet: #9 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:18)
> 1 | class Foo {method<>()}
    |                  ^^"
`;

exports[`snippet: #9 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:18)
> 1 | class Foo {method<>()}
    |                  ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #10 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | (class Foo {method<>()})
    |                   ^
Cause: Type parameter list cannot be empty. (1:18)"
`;

exports[`snippet: #10 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | (class Foo {method<>()})
    |                   ^^"
`;

exports[`snippet: #10 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | (class Foo {method<>()})
    |                   ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #11 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:22)
> 1 | class Foo {get getter<>()}
    |                      ^
Cause: Type parameter list cannot be empty. (1:21)"
`;

exports[`snippet: #11 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:22)
> 1 | class Foo {get getter<>()}
    |                      ^^"
`;

exports[`snippet: #11 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:22)
> 1 | class Foo {get getter<>()}
    |                      ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #12 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | (class Foo {get getter<>()})
    |                       ^
Cause: Type parameter list cannot be empty. (1:22)"
`;

exports[`snippet: #12 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | (class Foo {get getter<>()})
    |                       ^^"
`;

exports[`snippet: #12 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:23)
> 1 | (class Foo {get getter<>()})
    |                       ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #13 format[babel-ts] 1`] = `
"Type argument list cannot be empty. (1:25)
> 1 | class Foo {property: Bar<> = 1}
    |                         ^
Cause: Type argument list cannot be empty. (1:24)"
`;

exports[`snippet: #13 format[oxc-ts] 1`] = `
"Type argument list cannot be empty. (1:25)
> 1 | class Foo {property: Bar<> = 1}
    |                         ^^"
`;

exports[`snippet: #13 format[typescript] 1`] = `
"Type argument list cannot be empty. (1:25)
> 1 | class Foo {property: Bar<> = 1}
    |                         ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #14 format[babel-ts] 1`] = `
"Type argument list cannot be empty. (1:26)
> 1 | (class Foo {property: Bar<> = 1})
    |                          ^
Cause: Type argument list cannot be empty. (1:25)"
`;

exports[`snippet: #14 format[oxc-ts] 1`] = `
"Type argument list cannot be empty. (1:26)
> 1 | (class Foo {property: Bar<> = 1})
    |                          ^^"
`;

exports[`snippet: #14 format[typescript] 1`] = `
"Type argument list cannot be empty. (1:26)
> 1 | (class Foo {property: Bar<> = 1})
    |                          ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #15 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | interface Foo<> {}
    |              ^
Cause: Type parameter list cannot be empty. (1:13)"
`;

exports[`snippet: #15 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | interface Foo<> {}
    |              ^^"
`;

exports[`snippet: #15 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:14)
> 1 | interface Foo<> {}
    |              ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #16 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | interface Foo {bar<>()}
    |                   ^
Cause: Type parameter list cannot be empty. (1:18)"
`;

exports[`snippet: #16 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | interface Foo {bar<>()}
    |                   ^^"
`;

exports[`snippet: #16 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:19)
> 1 | interface Foo {bar<>()}
    |                   ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #17 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:16)
> 1 | interface Foo {<>(): boolean}
    |                ^
Cause: Type parameter list cannot be empty. (1:15)"
`;

exports[`snippet: #17 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:16)
> 1 | interface Foo {<>(): boolean}
    |                ^^"
`;

exports[`snippet: #17 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:16)
> 1 | interface Foo {<>(): boolean}
    |                ^^
Cause: Type parameter list cannot be empty."
`;

exports[`snippet: #18 format[babel-ts] 1`] = `
"Type argument list cannot be empty. (1:15)
> 1 | const foo: Foo<> = 1
    |               ^
Cause: Type argument list cannot be empty. (1:14)"
`;

exports[`snippet: #18 format[oxc-ts] 1`] = `
"Type argument list cannot be empty. (1:15)
> 1 | const foo: Foo<> = 1
    |               ^^"
`;

exports[`snippet: #18 format[typescript] 1`] = `
"Type argument list cannot be empty. (1:15)
> 1 | const foo: Foo<> = 1
    |               ^^
Cause: Type argument list cannot be empty."
`;

exports[`snippet: #19 format[babel-ts] 1`] = `
"Type parameter list cannot be empty. (1:12)
> 1 | type Foo = <>() => {}
    |            ^
Cause: Type parameter list cannot be empty. (1:11)"
`;

exports[`snippet: #19 format[oxc-ts] 1`] = `
"Type parameter list cannot be empty. (1:12)
> 1 | type Foo = <>() => {}
    |            ^^"
`;

exports[`snippet: #19 format[typescript] 1`] = `
"Type parameter list cannot be empty. (1:12)
> 1 | type Foo = <>() => {}
    |            ^^
Cause: Type parameter list cannot be empty."
`;
